# hackflare

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.combined  ELIXIR_DOCS.md  LICENSE.md  README.md  ROADMAP.md  builder.dockerfile  clippy.toml  compose.combined.yml  compose.dev.yml  compose.prod.yml  docker-compose.coolify.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  hackflare_supervisord.conf  mix.exs  package-lock.json  package.json
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflow/: docker build & pub.yml
Backend/: .env.example  Cargo.toml  Dockerfile  README.md
Frontend/: Dockerfile  bun-env.d.ts  components.json  package.json  tsconfig.json
app/: app.css  root.tsx  routes.ts
assets/: tsconfig.json
backend/: .env.example  Cargo.toml  Dockerfile  README.md  builder.dockerfile
backend/src/: app.rs  config.rs  main.rs  nameserver.rs  persistence.rs  state.rs
backend/src/domain/: auth.rs  dns.rs
config/: config.exs  dev.exs  prod.exs  runtime.exs
deployment/: Dockerfile.combined  compose.combined.yml  compose.dev.yml  compose.prod.yml
doc/: .build  .build.markdown  404.html  Hackflare.Application.html  Hackflare.Application.md  Hackflare.Mailer.html  Hackflare.Nameserver.html  Hackflare.Native.html  Hackflare.Native.md  Hackflare.Repo.html  Hackflare.Repo.md  Hackflare.html  Hackflare.md  HackflareWeb.CoreComponents.html  HackflareWeb.Endpoint.html  HackflareWeb.Endpoint.md  HackflareWeb.ErrorHTML.html  HackflareWeb.ErrorHTML.md  HackflareWeb.ErrorJSON.html  HackflareWeb.Gettext.html  HackflareWeb.Gettext.md  HackflareWeb.Layouts.html  HackflareWeb.Layouts.md  HackflareWeb.PageController.html  HackflareWeb.PageController.md  HackflareWeb.PageHTML.html  HackflareWeb.PageHTML.md  HackflareWeb.Router.html  HackflareWeb.Telemetry.html  HackflareWeb.Telemetry.md  HackflareWeb.html  api-reference.html  hackflare.epub  index.html  search.html
docs/: API.md  INTEGRATION.md  README.md  ROADMAP.md  backend.md  dns.md
elixir/: ELIXIR_DOCS.md  README.md  mix.exs
frontend/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
hackflare_api/: Cargo.toml  Dockerfile
hackflare_api/src/: config.rs  lib.rs  main.rs  state.rs
hackflare_api/src/middlewares/: admin.rs  auth.rs  mod.rs
hackflare_api/src/models/: db.rs  mod.rs
hackflare_api/src/routes/: admin.rs  auth.rs  dns.rs  health.rs  logs.rs  mod.rs  notifications.rs  sessions.rs  settings.rs  slack.rs  traffic.rs  users.rs
hackflare_api/src/services/: api_keys.rs  config_overrides.rs  email.rs  mod.rs  notifications.rs  password_reset.rs  user_sessions.rs  users.rs
hackflare_dns/: Cargo.toml  clippy.toml
hackflare_dns/src/: error.rs  lib.rs
hackflare_dns/src/dns/: authoritative.rs  config.rs  engine.rs  manager.rs  mod.rs  records.rs  recursive.rs  registry.rs  wire.rs  zone.rs
hackflare_dns/src/dns/recursive/: cache.rs  error.rs  hints.rs  message.rs  mod.rs  resolver.rs  transport.rs
hackflare_dns/src/ns/: authority.rs  config.rs  hickory.rs  mod.rs  persistence.rs  server.rs  util.rs
lib/: hackflare.ex  hackflare_web.ex
rust/: Cargo.toml
types/: +routes.ts
(+308 files in other folders)
