[package]
name = "hackflare-api"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "net", "io-util", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
dotenv = "0.15.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio"] }
reqwest = { version = "0.13.3", features = ["form", "json"] }
rand = "0.10.1"
anyhow = "1.0.102"
tower-sessions = "0.15.0"
tower-http = { version = "0.6.10", features = ["trace"] }
jsonwebtoken = "10"
chrono = { version = "0.4", features = ["serde"] }
